# pySWEETCat

./: .travis.yml  CONTRIBUTORS.md  README.md  README.rst  pyproject.toml  pysweetcat.py  setup.py
.github/workflows/: python-publish.yml
pysweetcat/: __init__.py  config.py  pysweetcat.py
pysweetcat/tests/: test_import.py
